--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ body {
   padding: 20px;
   display: table;
   margin: 0 auto 20px auto; }
+  .logo__src {
+    width: 100%; }
 
 .card {
   box-shadow: 0px 5px 6px rgba(0, 0, 0, 0.03); }
