--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -16,6 +16,25 @@
     box-sizing: border-box;
     float: left;
 }
+
+.col-md-2{
+    width: 20%;
+    margin-top: 15px;
+
+    @media screen and (max-width: 480px){
+        width: 50%;
+    }
+}
+
+.col-md-3{
+    width: 25%;
+    margin-top: 15px;
+
+    @media screen and (max-width: 480px){
+        width: 50%;
+    }
+}
+
 .col-md-4{
     width: 33.33%;
     margin-top: 15px;
@@ -24,3 +43,5 @@
         width: 50%;
     }
 }
+
+
