--- a/style.css
+++ b/style.css
@@ -16,6 +16,20 @@ body {
   box-sizing: border-box;
   float: left; }
 
+.col-md-2 {
+  width: 20%;
+  margin-top: 15px; }
+  @media screen and (max-width: 480px) {
+    .col-md-2 {
+      width: 50%; } }
+
+.col-md-3 {
+  width: 25%;
+  margin-top: 15px; }
+  @media screen and (max-width: 480px) {
+    .col-md-3 {
+      width: 50%; } }
+
 .col-md-4 {
   width: 33.33%;
   margin-top: 15px; }
@@ -26,6 +40,10 @@ body {
 .homeProducts__img {
   width: 100%;
   display: block; }
+.homeProducts__card {
+  transition: all .5s; }
+  .homeProducts__card:hover {
+    transform: scale(1.02); }
 
 .logo {
   background: #F1F2F2;
@@ -33,6 +51,7 @@ body {
   display: table;
   margin: 0 auto 20px auto; }
   .logo__src {
+    max-width: 60px;
     width: 100%; }
 
 .card {
