add rings in wordpress

--- a/all.css
+++ b/all.css
@@ -1,5 +1,5 @@
 body {
-  background: #f4f8fa; }
+  background: #E7E7E9; }
 
 .container {
   max-width: 1620px;
@@ -57,4 +57,4 @@ body {
 .card {
   box-shadow: 0px 5px 6px rgba(0, 0, 0, 0.03); }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=all.css.map */
