--- a/style.css
+++ b/style.css
@@ -1,8 +1,60 @@
-/*
-Theme Name: Joyerías AFN
-Author: Franky Cunza
-Description: Tema de Joyerías AFN
-Version: 1.0.0
-*/
+body {
+  background: #f4f8fa; }
 
-@import 'all.css';
+.container {
+  max-width: 1620px;
+  width: 100%;
+  margin: 0 auto; }
+
+.row {
+  margin-left: -12px;
+  margin-right: -12px;
+  margin-top: -15px; }
+
+.col {
+  padding: 0 12px;
+  box-sizing: border-box;
+  float: left; }
+
+.col-md-2 {
+  width: 20%;
+  margin-top: 15px; }
+  @media screen and (max-width: 480px) {
+    .col-md-2 {
+      width: 50%; } }
+
+.col-md-3 {
+  width: 25%;
+  margin-top: 15px; }
+  @media screen and (max-width: 480px) {
+    .col-md-3 {
+      width: 50%; } }
+
+.col-md-4 {
+  width: 33.33%;
+  margin-top: 15px; }
+  @media screen and (max-width: 480px) {
+    .col-md-4 {
+      width: 50%; } }
+
+.homeProducts__img {
+  width: 100%;
+  display: block; }
+.homeProducts__card {
+  transition: all .5s; }
+  .homeProducts__card:hover {
+    transform: scale(1.02); }
+
+.logo {
+  background: #F1F2F2;
+  padding: 20px;
+  display: table;
+  margin: 0 auto 20px auto; }
+  .logo__src {
+    max-width: 60px;
+    width: 100%; }
+
+.card {
+  box-shadow: 0px 5px 6px rgba(0, 0, 0, 0.03); }
+
+/*# sourceMappingURL=style.css.map */
