--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,8 @@
+@import 'assets/scss/reset';
 @import 'assets/scss/variables';
 @import 'assets/scss/base';
 @import 'assets/scss/layout';
 @import 'assets/scss/homeProducts';
 @import 'assets/scss/logo';
 @import 'assets/scss/card';
+@import 'assets/scss/title';
