--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700&display=swap');
+
 $color_one: #181817;
 $color_two: #F1F2F2;
 $color_three: #f4f8fa;
@@ -8,3 +10,5 @@ $color_four: #E7E7E9;
 $font_one: 'Work Sans', sans-serif;
 
 $padding: 12px;
+
+$font_two: 'Vevey';
