--- a/all.css
+++ b/all.css
@@ -49,6 +49,11 @@ table {
 body {
   background: #E7E7E9; }
 
+@font-face {
+  font-family: 'Vevey';
+  src: url("../fonts/Vevey.woff2") format("woff2"), url("../fonts/Vevey.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
 .container {
   max-width: 1620px;
   width: 100%;
@@ -95,9 +100,12 @@ body {
 
 .logo {
   background: #F1F2F2;
-  padding: 20px;
+  padding: 15px 20px;
   display: table;
   margin: 0 auto 20px auto; }
+  .logo__title {
+    font-family: "Vevey";
+    font-size: 44px; }
   .logo__src {
     max-width: 60px;
     width: 100%; }
@@ -107,7 +115,7 @@ body {
 
 .title__two {
   font-family: "Work Sans", sans-serif;
-  font-size: 20px;
+  font-size: 26px;
   padding: 0 12px;
   font-weight: 600; }
 
