--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,9 @@
 @import 'assets/scss/reset';
 @import 'assets/scss/variables';
 @import 'assets/scss/base';
+@import 'assets/scss/fonts';
+@import 'assets/scss/header';
+
 @import 'assets/scss/layout';
 @import 'assets/scss/homeProducts';
 @import 'assets/scss/logo';
