--- a/all.css
+++ b/all.css
@@ -58,11 +58,15 @@ body {
   max-width: 1620px;
   width: 100%;
   margin: 0 auto; }
+  .container .row + .row {
+    margin-top: 20px; }
 
 .row {
   margin-left: -12px;
   margin-right: -12px;
-  margin-top: -15px; }
+  margin-top: -15px;
+  width: 100%;
+  overflow: hidden; }
 
 .col {
   padding: 0 12px;
