--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -2,6 +2,10 @@
     max-width: 1620px;
     width: 100%;
     margin: 0 auto;
+
+    .row + .row{
+        margin-top: 20px;
+    }
 }
 
 
@@ -10,6 +14,8 @@
     margin-left: -12px;
     margin-right: -12px;
     margin-top: -15px;
+    width: 100%;
+    overflow: hidden;
 }
 .col{
     padding: 0 12px;
