--- a/all.css
+++ b/all.css
@@ -67,11 +67,17 @@ body {
   margin-top: -15px;
   width: 100%;
   overflow: hidden; }
+  @media screen and (max-width: 480px) {
+    .row {
+      margin: 0; } }
 
 .col {
   padding: 0 12px;
   box-sizing: border-box;
   float: left; }
+  @media screen and (max-width: 480px) {
+    .col {
+      padding: 0 5px; } }
 
 .col-md-2 {
   width: 20%;
@@ -79,6 +85,9 @@ body {
   @media screen and (max-width: 480px) {
     .col-md-2 {
       width: 50%; } }
+  @media screen and (max-width: 320px) {
+    .col-md-2 {
+      width: 100%; } }
 
 .col-md-3 {
   width: 25%;
@@ -111,6 +120,9 @@ body {
   padding-bottom: 20px; }
   .homeProducts__card:hover {
     transform: scale(1.02); }
+  @media screen and (max-width: 480px) {
+    .homeProducts__card {
+      min-height: 200px; } }
 
 .logo {
   background: #F1F2F2;
