--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -4,12 +4,16 @@ $color_one: #181817;
 $color_two: #F1F2F2;
 $color_three: #f4f8fa;
 
+$color__five: #FF8000;
+$color__black: #202020;
 
-$color_four: #E7E7E9;
+$color_four: #F7F7F7;
 
 $font_one: 'Work Sans', sans-serif;
 
 $padding: 12px;
+
+$box__shadow: 0px 0px 15px rgba(0, 0, 0, 0.02);
 
 $font_two: 'Vevey';
 
