--- a/style.scss
+++ b/style.scss
@@ -9,3 +9,13 @@
 @import 'assets/scss/logo';
 @import 'assets/scss/card';
 @import 'assets/scss/title';
+@import 'assets/scss/home';
+@import 'assets/scss/menu';
+@import 'assets/scss/homeDetails';
+@import 'assets/scss/homeOpinions';
+@import 'assets/scss/footer';
+
+
+
+
+
