--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,4 +1,49 @@
 .header{
-
+    background: #ffffff;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.02);
+    position: relative;
     
+    .container{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    &__menu, &__logo{
+
+    }
+    &__info{
+        // float: left;
+    }
+    &__socials{
+
+        &__title, &__menu{
+            display: inline-block;
+        }
+        &__menu{
+
+        }
+        &__list{
+            display: inline-block;
+        }
+    }
+    &__number, &__email{
+        display: inline-block;
+        line-height: 75px;
+        i{
+            margin-right: 5px;
+        }
+    }
+    &__email{
+        margin-left: 15px;
+    }
+    &__logo{
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        // float: left;
+    }
+    &__menu{
+        // float: right;
+    }
 }
