--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,7 +1,9 @@
 .container{
-    max-width: 1620px;
+    max-width: 1356px;
     width: 100%;
     margin: 0 auto;
+    // padding-bottom: 100px;
+    overflow: hidden;
 
     .row + .row{
         margin-top: 20px;
@@ -13,7 +15,6 @@
 .row{
     margin-left: -12px;
     margin-right: -12px;
-    margin-top: -15px;
     width: 100%;
     overflow: hidden;
 
@@ -43,7 +44,7 @@
 }
 
 .col-md-3{
-    width: 25%;
+    width: 33.33%;
     margin-top: 15px;
 
     @media screen and (max-width: 480px){
@@ -52,7 +53,7 @@
 }
 
 .col-md-4{
-    width: 33.33%;
+    width: 25%;
     margin-top: 15px;
 
     @media screen and (max-width: 480px){
