--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,8 @@
 @import 'assets/scss/homeDetails';
 @import 'assets/scss/homeOpinions';
 @import 'assets/scss/footer';
+@import 'assets/scss/owl_carousel/owl.carousel.scss';
+
 
 
 
