--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
 @import url(all.css);
+@font-face {
+    font-family: 'Vevey';
+    src: url('assets/fonts/Vevey.woff2') format('woff2'),
+        url('assets/fonts/Vevey.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+.logo__title{
+    font-family: 'Vevey';
+}
