--- a/assets/scss/_logo.scss
+++ b/assets/scss/_logo.scss
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'Vevey';
+    src: url('../fonts/vevey-webfont.woff2') format('woff2'),
+        url('../fonts/vevey-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .logo{
     // background: $color_two;
     padding: 15px 0;
@@ -8,7 +16,7 @@
     }
 
     &__title{
-        font-family: $font_two;
+        font-family: 'Vevey';
         text-align: center;
         font-size: 44px;
     }
