--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -11,7 +11,7 @@ $color__black: #202020;
 $color__facebook: #3B5998;
 $color__instagram: #DD27AB;
 $color__linkedin:  #0E76A8;
-
+$color__green: #27D467;
 $color_four: #F7F7F7;
 
 $font_one: 'Work Sans', sans-serif;
