--- a/style.scss
+++ b/style.scss
@@ -14,10 +14,5 @@
 @import 'assets/scss/homeDetails';
 @import 'assets/scss/homeOpinions';
 @import 'assets/scss/footer';
+@import 'assets/scss/homeCarousel';
 @import 'assets/scss/owl_carousel/owl.carousel.scss';
-
-
-
-
-
-
