--- a/style.scss
+++ b/style.scss
@@ -16,3 +16,4 @@
 @import 'assets/scss/footer';
 @import 'assets/scss/homeCarousel';
 @import 'assets/scss/owl_carousel/owl.carousel.scss';
+@import 'assets/scss/fontawesome';
