--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -1,4 +1,4 @@
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css');
+// @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css');
 body{
     background: $color_four;
     font-family: $font_one;
